<resources>
    <string name="app_name">LOLmao</string>
    <string name="title_activity_login">Sign in</string>
    <string name="league_patch">League Patch</string>
    <string name="champions">Champions</string>
    <string name="splash_temp">Teemo</string>
    <string name="splash_title">da wittle shithead</string>
    <string name="abilityTitle">Ability Title</string>
    <string name="abilityDesc">Ability Description: REE OH EMM GEE REEEEEEEEEEE </string>
    <string name="abilityLetter">PQWER</string>
    <string name="ChampionAbilities">Abilities</string>
    <string name="ToggleOnButton">Details</string>
    <string name="ToggleOffButton">Descriptions</string>
    <string name="ChampionSkinsTitle">Champion Skins</string>
    <string name="title_activity_champion_details_tabs">ChampionDetailsTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="championTags">TOP JG MID ADC SUP</string>
    <string name="lore_title">Lore</string>
    <string name="lore"> Once a upon a time(…, &#8230;)</string>
    <string name="loadingImage">Loading Screen Image</string>
    <string name="summary">Summary</string>
    <string name="ratingTitle">Champion Ratings</string>
    <string name="ally_tips">Ally Tips</string>
    <string name="enemy_tips">Enemy Tips</string>
    <string name="gametips">Gameplay Tips</string>
    <string name="sr">Summoner\'s Rift</string>
    <string name="ha">Howling Abyss</string>
    <string name="tt">Twisted Treeline</string>

</resources>
