<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Image-Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Splash Image-->
        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/teemo_splash" />

    </RelativeLayout>

    <!--Champion Name-->
    <TextView
        android:id="@+id/championName"
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_temp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="28dp"
        android:textStyle="bold" />

    <!--Champion Title-->
    <TextView
        android:id="@+id/championTitle"
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <!--Top Text (3) Holder-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--1/3-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topText1"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/championTags"
                android:textSize="20dp" />

        </LinearLayout>

        <!--2/3-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topText2"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/championTags"
                android:textSize="20dp" />

        </LinearLayout>

        <!--3/3-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topText3"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/championTags"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <!--Lore Title-->
    <TextView
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/lore_title"
        android:textSize="25dp"
        android:textStyle="bold" />

    <!--Lore Description-->
    <TextView
        android:id="@+id/loreTextView"
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lore"
        android:textSize="20dp" />

    <!--Ally Tips-->
    <TextView
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ally_tips"
        android:textColor="@color/ally"
        android:textSize="25dp"
        android:textStyle="bold" />

    <!--Tips Text-->
    <TextView
        android:id="@+id/allyText"
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20dp" />

    <!--Enemy Tips-->
    <TextView
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enemy_tips"
        android:textColor="@color/enemy"
        android:textSize="25dp"
        android:textStyle="bold" />

    <!--Tips Text-->
    <TextView
        android:id="@+id/enemyText"
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20dp" />


</LinearLayout>