<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChampionDetails">

    <!--Image/Recycler-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Image-Title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Splash Image-->
            <ImageView
                android:id="@+id/splashImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/teemo_splash"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <!--Champion Name-->
                <TextView
                    android:id="@+id/championName"
                    android:text="@string/splash_temp"
                    android:textSize="28sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    style="@style/LetterShadows"
                    />

                <!--Champion Title-->
                <TextView
                    android:id="@+id/championTitle"
                    android:text="@string/splash_title"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    style="@style/LetterShadows"
                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!--Champion Abilities Title-->
            <TextView
                android:id="@+id/abilityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ChampionAbilities"
                android:textSize="30sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/ToggleOnButton"
                android:id="@+id/toggleAbilities"
                android:layout_alignEnd="@id/abilityTitle"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/championSkinsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/ChampionSkinsTitle"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                >

            </android.support.v4.view.ViewPager>

            <TextView
                android:id="@+id/skinTitleText"
                android:text="Skin Name"
                android:textSize="25sp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/White"
                style="@style/LetterShadows"
                android:layout_alignBottom="@+id/viewPager"/>

            <LinearLayout
                android:id="@+id/dotsLayout"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignTop="@+id/viewPager">

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>