<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tempBG"
    android:orientation="vertical">

    <TextView
        style="@style/LetterShadows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/gametips"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Ally Tips-->
            <TextView
                android:id="@+id/aTips"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/ally_tips"
                android:textColor="@color/ally"
                android:textSize="25dp"
                android:textStyle="bold" />

            <!--Tips Text-->
            <TextView
                android:id="@+id/allyText"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Enemy Tips-->
            <TextView
                android:id="@+id/eTips"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/enemy_tips"
                android:textColor="@color/enemy"
                android:textSize="25dp"
                android:textStyle="bold" />

            <!--Tips Text-->
            <TextView
                android:id="@+id/enemyText"
                style="@style/LetterShadows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>